package com.example;

public enum Nivel {
    INFO,
    WARNING,
    ERROR;
}
